force-app/main/default/objects/GetFeedback_Survey__c/GetFeedback_Survey__c.object-meta.xml
<CustomObject>
    <label>GetFeedback Survey</label>
    <nameField>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GetFeedback Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>