force-app/main/default/objects/GetFeedback_Survey__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The contact whom the survey was sent.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>GetFeedback Surveys</relationshipLabel>
    <relationshipName>GetFeedback_Surveys1</relationshipName>
    <type>Lookup</type>
</CustomField>