force-app/main/default/objects/GetFeedback_Survey__c/fields/Delivery_on_Time__c.field-meta.xml
<CustomField>
    <fullName>Delivery_on_Time__c</fullName>
    <description>Was the Welco product/solution delivered on time as promised?</description>
    <label>Delivery on Time</label>
    <length>4</length>
    <type>Text</type>
</CustomField>