force-app/main/default/objects/GetFeedback_Survey__c/fields/Ease_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Ease_of_Business__c</fullName>
    <description>Did Welco make it easy to do business with us, requiring minimal effort from you?</description>
    <label>Ease of Business</label>
    <length>4</length>
    <type>Text</type>
</CustomField>