force-app/main/default/objects/GetFeedback_Survey__c/fields/Order_Completion__c.field-meta.xml
<CustomField>
    <fullName>Order_Completion__c</fullName>
    <description>Did Welco complete the order as requested and quoted?</description>
    <label>Order Completion</label>
    <length>4</length>
    <type>Text</type>
</CustomField>