force-app/main/default/objects/GetFeedback_Survey__c/fields/Recommend__c.field-meta.xml
<CustomField>
    <fullName>Recommend__c</fullName>
    <description>If there is an opportunity, would you recommend Welco to a co-worker or someone in your network?</description>
    <label>Recommend</label>
    <length>4</length>
    <type>Text</type>
</CustomField>